creating readme, pushing to repo for deployment links

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
+    <!-- created a bootstrap button to clear the entire day -->
+    <button class="btn btnClear btn-primary" type="button">Clear Day</button>
   </header>
   <div class="container-lg px-5">
 
